--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,32 @@
-body{
+html, body {
     margin: 0 auto;
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    min-height: 150vh;
+    color: #ffffff;
+    background: radial-gradient(
+        circle at center top,
+        rgb(24, 52, 145),
+        rgb(10, 23, 59) 70%
+    );
 }
+
 
 nav {
     display: flex;
+    position: fixed;
     justify-content: space-between;
     align-items: center;
+    background: #0206178c;
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, .08);
+    transform: translateY(-170%);
+    width: 1500px;
+    padding-left: 20px;
+    padding-right: 20px;
+    justify-self: center;
 }
 
 .brand h1 {
@@ -41,7 +60,7 @@ nav {
 
 ul .links{
     text-decoration: none;
-    color: #000;
+    color: #fff;
     font-weight: 500;
     padding-left: 40px;
     font-size: 18px;
@@ -191,7 +210,9 @@ ul .links:hover{
     margin: 80px auto;
     padding: 0 20px;
     font-family: 'Inter', system-ui, sans-serif;
-    background: #f9fafb;
+    background: rgba(241, 245, 249, 0.96);
+    color: #0f172a;
+
     border-radius: 16px;
     padding: 48px 40px;
     box-shadow: 0 16px 30px rgba(0, 0, 0, 0.05);
@@ -202,6 +223,7 @@ ul .links:hover{
     font-weight: 700;
     color: #1f2937;
     margin-bottom: 24px;
+    margin-top: 0;
     letter-spacing: -0.5px;
 }
 
