--- a/styles.css
+++ b/styles.css
@@ -206,16 +206,17 @@ ul .links:hover{
 }
 
 .about {
-    max-width: 800px;
-    margin: 80px auto;
+    max-width: 1100px;
+    margin: 60px auto;
     padding: 0 20px;
     font-family: 'Inter', system-ui, sans-serif;
     background: rgba(241, 245, 249, 0.96);
     color: #0f172a;
-
     border-radius: 16px;
     padding: 48px 40px;
     box-shadow: 0 16px 30px rgba(0, 0, 0, 0.05);
+    padding-bottom: 32px;
+    padding-top: 36px;
 }
 
 .about h2{
@@ -242,7 +243,7 @@ ul .links:hover{
     line-height: 1.8;
     color: #4b5563;
     margin-bottom: 20px;
-    max-width: 720px;
+    max-width: 1120px;
 }
 
 .about p:first-of-type{
@@ -262,4 +263,61 @@ ul .links:hover{
     .about p{
         font-size: 1.1rem;
     }
+}
+
+.container{
+    background-color: rgba(241, 245, 249, 0.96);
+    border: none;
+    border-radius: 16px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+    padding: 40px;
+    padding-left: 60px;
+    padding-bottom: 35px;
+    padding-right: 65px;
+    width: 1050px;
+    justify-self: center;
+}
+
+.container2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.item{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(252,253,254);
+    border: none;
+    border-radius: 16px;
+    padding: 10px;
+    padding-left: 20px;
+    max-width: 300px;
+    box-shadow: 10px 20px 20px rgba(0, 0, 0, 0.3);
+    transition: 0.3s ease;
+}
+
+.item:hover{
+    transform: translateY(-6px);
+    box-shadow: 10px 26px 20px rgba(0, 0, 0, 0.3);
+}
+
+.title{
+    color: #1f2937;
+    padding-left: 5px;
+    padding-bottom: 10px;
+    margin-top: 0;
+}
+
+.name{
+    color: #000;
+}
+
+.description{
+    font-size: 1.05rem;
+    line-height: 1.8;
+    color: #4b5563;
+    margin-bottom: 10px;
+    font-family: 'Inter', system-ui, sans-serif;
+    margin-top: 0;
 }
