--- a/styles.css
+++ b/styles.css
@@ -348,3 +348,66 @@ ul .links:hover{
     padding-left: 5px;
     color: #4b5563;
 }
+
+.container1{
+    display: flex;
+    padding-left: 100px;
+}
+
+.container12{
+    display: grid;
+}
+
+.container3{
+    margin-top: 50px;
+    height: 440px;
+    background: #0206178c;
+    border: none;
+    border-radius: 16px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+    width: 600px;
+    margin-left: 120px;
+    justify-self: left;
+    margin-bottom: 50px;
+    padding: 30px;
+    padding-left: 45px;
+}
+
+.title1{
+    display: flex;
+    justify-self: center;
+    font-size: 40px;
+    padding: 30px;
+    padding-left: 45px;
+    margin-top: 75px;
+    margin-bottom: 0;
+}
+
+.title2{
+    font-size: 32px;
+    margin-top: 0;
+    margin-bottom: 40px;
+}
+
+.nameInput{
+    border: none;
+    background-color: #12296f;
+    border: 1px solid #091238;
+    height: 36px;
+    width: 200px;
+    border-radius: 16px;
+    padding-left: 14px;
+    color: #fff;
+}
+
+.nameInput:focus{
+    outline: none;
+    border: 1px solid #0f0f0f;
+}
+
+.container4{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 50px;
+}
