--- a/styles.css
+++ b/styles.css
@@ -315,7 +315,7 @@ ul .links:hover{
 
 .item:hover{
     transform: translateY(-3px);
-    box-shadow: 8px 19px 16px rgba(0, 0, 0, 0.3);
+    box-shadow: 8px 19px 16px rgba(0cd , 0, 0, 0.3);
 }
 
 .title{
@@ -624,4 +624,91 @@ body.dark-mode .nameInput {
 body.dark-mode .nameInput::placeholder {
     color: #ffffff;
     opacity: 0.9    ;
+}
+
+.containerBtn{
+    background-color: rgba(241, 245, 249, 0.96);
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+    padding: 40px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    transition: 0.3s ease;
+}
+
+.containerBtn:hover{
+    background: #091c61 !important;
+    transform: translateY(-4px);
+}
+
+.active{
+    background: #1f45cc !important;
+    border-bottom: 3px solid #4f6bff;
+    box-shadow: 0 14px 50px rgba(100, 100, 100, 0.45);
+}
+
+.containerBtn.active:hover{
+    background-color: #1f45cc !important;
+    transform: translateY(0);
+}
+
+.chatContainer{
+    background-color: rgba(241, 245, 249, 0.96);
+    border: none;
+    border-radius: 16px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    margin-top: 50px;
+    min-height: 500px;
+    width: 1070px;
+    justify-self: left;
+    margin-left: 182px;
+}
+
+.chatBox{
+    min-height: 500px;
+    border: 1px dashed #e6e8eb8c;
+    border-bottom: 1px solid #e6e8eb8c;
+    border-radius: 16px;
+}
+
+.send1{
+    background: #1f45cc;
+    border: none;
+    width: 90px;
+    height: 46px;
+    border-radius: 6px;
+}
+
+.send{
+    height: 26px;
+    width: auto;
+}
+
+.chatwithBot{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.chatInput{
+    border: none;
+    background-color: #12296f;
+    border: 1px solid #091238;
+    height: 44px;
+    border-radius: 6px;
+    padding-left: 14px;
+    color: #fff;
+    width: 97%;
+}
+
+.chatInput::placeholder{
+    color: rgb(182, 181, 194);
+}
+
+.chatInput:focus{
+    outline: none;
+    border: 1px solid #000000;
 }
