--- a/styles.css
+++ b/styles.css
@@ -862,3 +862,29 @@ body.dark-mode .nameInput::placeholder {
     justify-content: center;
 }
 
+.userMessage {
+    background-color: #4f46e5;
+    color: white;
+    padding: 6px 10px;
+    border-radius: 10px;
+    margin: 6px 0;
+    max-width: 80%;
+    justify-self: right;
+    margin-right: 10px;
+    margin-top: 8px;
+    padding-left: 14px;
+    padding-right: 16px;
+}
+
+.botMessage {
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 10px;
+    background: transparent;
+    color: white;
+    font-weight: 500;
+    padding: 6px 10px;
+    border-radius: 10px;
+    max-width: 80%;
+}
